fix: Edit readability on big screen
Added max width of 800 px and auto margin so it will be a better readably colom in the middle of the page.

--- a/resources/css/curriculum_vitae.css
+++ b/resources/css/curriculum_vitae.css
@@ -65,10 +65,11 @@ p {
     font-style: normal;    
 }
 
-main li {
+main {
     font-size: 20px;
     color: rgb(183, 137, 239);
-    margin: 0px 150px 0px 150px;
+    width: 800px;
+    margin: 0 auto;
 }
 
 /* cv_nav ul {
